# nRF5340-samples

./: README.md
hrdfu/: CMakeLists.txt  README.md  prj.conf  ubx_evknorab10_nrf5340_cpuapp.overlay
hrdfu/TransferFileOVerComport/: TransferFile.py
hrdfu/boards/arm/ubx_evknorab10_nrf5340/: ubx_evknorab10_shared_sram_planning_conf.dtsi
hrdfu/child_image/mcuboot/: prj.conf
hrdfu/child_image/mcuboot/boards/: ubx_evknorab10_nrf5340_cpuapp.overlay
hrdfu/hci_rpmsg/: .gitignore  CMakeLists.txt  README.rst  prj.conf
hrdfu/hci_rpmsg/src/: local_version.h  main.c
hrdfu/src/: main.c
hrdfu/src/storage/: storage.c  storage.h
hrdfu/src/uart/: CMakeLists.txt  useruart.c  useruart.h
